--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
     <meta property="og:image" content="http://www.bramlettfamily.com/images/meta-image.jpg" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-55608666-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-149462843-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
 
-      gtag('config', 'UA-55608666-1');
-    </script>
+		  gtag('config', 'UA-149462843-1');
+		</script>
+
 
   </head>
   <body>
@@ -43,12 +44,16 @@
     </header>
     <div id='main' role='main'>
        <div class="container">
-          <iframe id="podcast" src="https://anchor.fm/calvinandjessica/embed/episodes/Our-First-Podcast--How-We-Met-e588pm/a-amf7t1" width="100%" frameborder="0" scrolling="no"></iframe>
+          <iframe id="podcast" src="https://anchor.fm/calvinandjessica/embed" width="100%" frameborder="0" scrolling="no"></iframe>
 
           <div class="text-center">
             <a class="btn btn-dark" href="https://www.youtube.com/channel/UCl-gw7o5I4e00SSDA3Ml5fg?sub_confirmation=1" target="blank">
               <img src="images/yt.svg"/> Subscribe
             </a>
+          </div>
+
+          <div class="products">
+          	<div id='product-component-1570334629087'></div>
           </div>
 
           <div class="social-profiles">
@@ -84,11 +89,14 @@
        </div>
      </div>
      <footer></footer>
+     <div id="snow"></div>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="https://codepen.io/bsehovac/pen/mddZWPw.js"></script>
     
     <script src='js/plugins.js'></script>
     <script src='js/script.js'></script>
+    <script src='js/shopify.js'></script>
 
     <script src="js/jquery.fitvids.js"></script>
     <script>
